--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,7 @@
-/* Created by: Mr. Coxall
-* Created on: Sep 2020
-* This file contains the CSS for index.html
-*/
+/* Created by: austin scavone
+   Created on: April 2022
+   This file contains the CSS functions for index.html */
+
+body {
+  text-align: center;
+}
